src/test/ui/parser/issue-24780.stderr
error: expected `;` or `{`, found `>`
  --> $DIR/issue-24780.rs:5:23
   |
LL | fn foo() -> Vec<usize>> {
   |                       ^ expected `;` or `{`

error: aborting due to previous error

